# egui-plotter-simple

./: Cargo.toml  README.md
src/: main.rs
